# localTTS

./: README.md  pyproject.toml
localtts/: __init__.py  kokoro_wrapper.py
