[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "localTTS"
version = "20250621"
dependencies = [
]
description = "Your local TTS model inference framework."
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "MIT license" }


[tool.setuptools]
packages = ["localtts"]
